--- a/react-app/src/components/CurrencySwitcher/currencySwitcher.module.scss
+++ b/react-app/src/components/CurrencySwitcher/currencySwitcher.module.scss
@@ -1,15 +1,22 @@
 .currencySwitcher{
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
   font-size: 1.2rem;
   .arrow{
-    padding-left: 15%;
+    position: relative;
+    left: 30%;
+    width: 10px;
+    height: 10px;
   }
 }
 
 .overlay{
   position: absolute;
-  width: 5vw;
+  width: 7vw;
   background-color: white;
-  border: 1px solid black;
   top: 7%;
   right: 14%;
   z-index: 400;
@@ -18,6 +25,11 @@
   flex-direction: column;
   align-items: center;
   overflow-x: auto;
+  filter: drop-shadow(0px 4px 35px rgba(168, 172, 176, 0.19));
+  scrollbar-width:thin;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .disabled{
