--- a/react-app/src/components/Option/option.module.scss
+++ b/react-app/src/components/Option/option.module.scss
@@ -29,14 +29,15 @@
     margin-right: 5%;
     width: 40px;
     height: 40px;
-
+    filter: drop-shadow(2px 2px 6px rgba(0, 0, 0, 0.15));
   }
   .sm{
     width: 30px;
     height: 18px;
   }
   .active{
-    border: #5ECE7B 1px solid;
+    outline:1px solid #5ECE7B;
+    border: white solid 2px;
   }
 }
 
